[package]
name = "proto-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.23.0", features = ["full"] }
dotenv_codegen = "0.15.0"
image = "*"
gif = "*"
imageproc = "0.23.0"